--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,5 +5,6 @@ html, body {
 .player {
     display: flex;
     justify-content: center;
-    align-items: center 
+    align-items: center;
+    margin-top: 50vh;
 }
