--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,6 +3,7 @@ html, body {
     padding: 0;
     outline: 0;
     box-sizing: border-box;
+    background-color: #7a79c1;
 }
 .player {
     display: flex;
